testdata/baselines/reference/submodule/compiler/jsFileCompilationDuplicateFunctionImplementation.errors.txt
error TS5055: Cannot write file 'b.js' because it would overwrite input file.
  Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
a.ts(1,10): error TS2393: Duplicate function implementation.


!!! error TS5055: Cannot write file 'b.js' because it would overwrite input file.
!!! error TS5055:   Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
!!! error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
==== b.js (0 errors) ====
    function foo() {
        return 10;
    }
==== a.ts (1 errors) ====
    function foo() {
             ~~~
!!! error TS2393: Duplicate function implementation.
        return 30;
    }
    
    